===============
Stalker Changes
===============

0.2.13.dev
==========

* **New:** ``Project`` instances can now have multiple repositories. Thus the
  ``repository`` attribute is renamed to ``repositories``.

* **New:** ``stalker.db.init()`` now automatically creates environment
  variables for each repository in the database.

* **New:** Added a new ``after_insert`` which listens ``Repository`` instance
  ``insert``s to automatically add environment variables for the newly inserted
  repositories.

* **Update:** ``Repository.make_relative()`` now handles paths with environment
  variables.

* **Fix:** Fixed ``TaskJugglerScheduler`` to correctly generate task absolute
  paths for PostgreSQL DB.

* **New:** ``Repository.path`` is now writable and sets the correct path
  (``linux_path``, ``windows_path``, or ``osx_path``) according to the current
  system.

* **New:** Setting either of the ``Repository.path``,
  ``Repository.linux_path``, ``Repository.windows_path``,
  ``Repository.osx_path`` attributes will update the related environment
  variable if the system and attribute are matching to each other, setting the
  ``linux_path`` on Linux or setting the ``windows_path`` on Windows or setting
  the ``osx_path`` on OSX will update the environment variable.

* **New:** Added ``Task.good`` attribute to easily connect tasks to ``Good``s.

* **New:** Added new methods to ``Repository`` to help managing paths:

  * ``Repository.find_repo()`` to find a repo from a given path. This is a
    class method so it can be directly used with the Repository class.
  * ``Repository.to_os_independent_path()`` to convert the given path to a OS
    independent path which uses environment variables. Again this is a class
    method too so it can be directly used with the Repository class.
  * ``Repository.env_var`` a new property that returns the related environment
    variable name of a repo instance. This is an instance property::

    # with default settings