@@ -45,6 +45,7 @@ Summary
    stalker.models.mixins.WorkingHoursMixin
    stalker.models.note.Note
    stalker.models.project.Project
+   stalker.models.project.ProjectRepository
    stalker.models.project.ProjectUser
    stalker.models.repository.Repository
    stalker.models.review.Review
