@@ -25,6 +25,7 @@ import unittest
 import tempfile
 import json
 import logging
+import copy
 
 from sqlalchemy.exc import IntegrityError
 
@@ -919,7 +920,7 @@ class DatabaseTester(unittest.TestCase):
         sql_query = 'select version_num from "alembic_version"'
         version_num = \
             db.DBSession.connection().execute(sql_query).fetchone()[0]
-        self.assertEqual('2252e51506de', version_num)
+        self.assertEqual('eaed49db6d9', version_num)
 
     def test_initialization_of_alembic_version_table_multiple_times(self):
         """testing if the db.create_alembic_table() will handle initializing
@@ -936,7 +937,7 @@ class DatabaseTester(unittest.TestCase):
         sql_query = 'select version_num from "alembic_version"'
         version_num = \
             db.DBSession.connection().execute(sql_query).fetchone()[0]
-        self.assertEqual('2252e51506de', version_num)
+        self.assertEqual('eaed49db6d9', version_num)
 
         db.DBSession.remove()
         db.setup(db_config)
@@ -2604,7 +2605,7 @@ class DatabaseModelsTester(unittest.TestCase):
         nice_name = new_project.nice_name
         notes = new_project.notes
         references = new_project.references
-        repositories = new_project.repositories
+        repositories = [repo]
         sequences = new_project.sequences
         start = new_project.start
         status = new_project.status
@@ -2625,7 +2626,7 @@ class DatabaseModelsTester(unittest.TestCase):
         new_project_db = DBSession.query(Project). \
             filter_by(name=kwargs["name"]).first()
 
-        assert (isinstance(new_project_db, Project))
+        assert isinstance(new_project_db, Project)
 
         self.assertEqual(assets, new_project_db.assets)
         self.assertEqual(code, new_project_db.code)
